--- a/estilo.css
+++ b/estilo.css
@@ -44,10 +44,9 @@
 
             }
 
-            body,html{
+            body{
                 margin: 0;
                 width: 100%;
-                height: 100%;
             }
 
             .divwhite{
