--- a/estilo.css
+++ b/estilo.css
@@ -92,7 +92,7 @@
             }
             
             div{
-                width: 500px;
+                width: 100%;
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 font-size: 50px;
                 float: left;
